first commit by lewy 4/29

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,9 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=none
 
 #禁用模板引擎的缓存
+#spring.thymeleaf.mode=HTML
+#spring.thymeleaf.encoding=UTF-8
+#spring.thymeleaf.content-type=text/html
 spring.thymeleaf.cache=false
 
 #页面访问路径中加上指定的项目名
@@ -15,3 +18,13 @@ spring.thymeleaf.cache=false
 server.context-path=/iaw
 #springboot2.0及以上用
 #server.servlet.context-path=/iaw
+
+#设置上传文件大小，默认只有1 m
+#2.x版本
+#spring.servlet.multipart.enabled=true 默认开启
+#spring.servlet.multipart.max-file-size=100MB
+#spring.servlet.multipart.maxRequestSize=100MB
+#1.x版本
+#spring.http.multipart.enabled=true 默认开启
+spring.http.multipart.max-file-size=100MB
+spring.http.multipart.max-request-size=100MB
