first commit by lewy 4/30

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,9 @@ server.context-path=/iaw
 #springboot2.0及以上用
 #server.servlet.context-path=/iaw
 
+#指定springMvc的日期格式（即只支持yyyy-MM-dd的形式，其他的格式会报错）
+#spring.mvc.date-format=yyyy-MM-dd
+
 #设置上传文件大小，默认只有1 m
 #2.x版本
 #spring.servlet.multipart.enabled=true 默认开启
