first commit by lewy 5/6

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,9 @@ spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=none
+#显示 hibernate运行的 sql 语句
+spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.show_sql=true 与上种一样的
 
 #禁用模板引擎的缓存
 #spring.thymeleaf.mode=HTML
