commit by lewy 5/12

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,6 +31,6 @@ server.context-path=/iaw
 #spring.servlet.multipart.max-file-size=100MB
 #spring.servlet.multipart.maxRequestSize=100MB
 #1.x°æ±¾
-#spring.http.multipart.enabled=true Ä¬ÈÏ¿ªÆô
-spring.http.multipart.max-file-size=100MB
-spring.http.multipart.max-request-size=100MB
+spring.http.multipart.enabled=true
+spring.http.multipart.max-file-size=10MB
+spring.http.multipart.max-request-size=10MB
