--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #database
 #本地测试
-spring.datasource.url=jdbc:mysql://localhost:3306/packmas?characterEncoding=UTF-8
+#spring.datasource.url=jdbc:mysql://localhost:3306/packmas?characterEncoding=UTF-8
 #服务器数据库
-#spring.datasource.url=jdbc:mysql://hadoop01:3306/packmas?characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://hadoop01:3306/packmas?characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
